[project]
name = "crypto"
version = "1"
description = "crypto analyse"
authors = [
    {name = "esukhanov",email = "beardrinker@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
