[project]
name = "crypto"
version = "1"
description = "crypto analyse"
authors = [
    {name = "esukhanov",email = "beardrinker@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pybit (>=5.14.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
